@@ -1,3 +1,7 @@
+2009-10-29  Ernesto Baschny  <ernst@cron-it.de>
+
+	* Fixed bug #12371: Warning issued on first load of install tool with open_basedir set
+
 2009-10-22  Oliver Hader  <oliver@typo3.org>
 
 	* Release of TYPO3 4.1.13
